# GISCI343_Assignment_1

./: .cache.sqlite  README.md  assignment1.html  assignment1.py  assignment1.qmd  assignment1.quarto_ipynb  assignment1.quarto_ipynb_1  assignment1.quarto_ipynb_2  assignment1.quarto_ipynb_3  assignment1.quarto_ipynb_4  assignment1.quarto_ipynb_5  assignment1.quarto_ipynb_6  assignment1.quarto_ipynb_7  assignment1.quarto_ipynb_8  assignment1.quarto_ipynb_9  main.py  pyproject.toml  sensor_cluster_map.html  sensor_map.html
