[project]
name = "gisci343-assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
]
